# fltask

./: README.md  pubspec.yaml
.github/workflows/: build.yml  release.yml
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/example/fltask/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: charts_page.dart  processes_page.dart  system_info_page.dart  task_manager_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/widgets/: process_list_item.dart  process_tree_item.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust/src/platform/: mod.rs
rust/src/platform/linux/: process.rs  system_info.rs  system_resources.rs
rust/src/platform/macos/: mod.rs  process.rs  system_info.rs  system_resources.rs
rust/src/platform/windows/: mod.rs  process.rs  system_info.rs  system_resources.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_fltask.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_fltask.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
