[package]
name = "rust_lib_fltask"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Windows 特定依赖
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "psapi", "pdh", "winbase", "processthreadsapi", "tlhelp32"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Performance",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
] }

# Linux apecific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"
libc = "0.2"
nix = { version = "0.29.0", features = ["fs"] }

# macOS specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.0"
sysctl = "0.5.0"
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
